--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "jest": "^23.6.0",
-    "vue-jest": "^3.0.2"
+    "vue-jest": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0"
   }
 }
